# rewrite_caffe

./: CMakeLists.txt  programming_recode.md  programming_record.md
cmake/: ConfigGen.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake
include/caffe/: blob.hpp  caffe.hpp  common.hpp  filler.hpp  layer.hpp  layer_factory.hpp  net.hpp  syncedmem.hpp
include/caffe/layers/: clip_layer.hpp  neuron_layer.hpp
include/caffe/test/: test_caffe_main.hpp
include/caffe/util/: cudnn.hpp  db.hpp  db_leveldb.hpp  db_lmdb.hpp  device_alternate.hpp  format.hpp  io.hpp  math_functions.hpp  rng.hpp  signal_handler.h
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  layer.cpp  layer_factory.cpp  syncedmem.cpp
src/caffe/layers/: clip_layer.cpp  clip_layer.cu  neuron_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/test/: CMakeLists.txt  test_blob.cpp  test_caffe_main.cpp  test_common.cpp  test_layer_factory.cpp  test_syncedmem.cpp
src/caffe/utils/: cudnn.cpp  db.cpp  db_leveldb.cpp  db_lmdb.cpp  io.cpp  math_functions.cpp  math_functions.cu
src/gtest/: CMakeLists.txt
tools/: CMakeLists.txt  caffe.cpp  compute_image_mean.cpp
